<resources>
    <string name="app_name">寺库奢侈品</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_product">尖货</string>
    <string name="tab_main_category">分类</string>
    <string name="tab_mian_car">购物车</string>
    <string name="tab_main_mine">我的</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
