<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.greenhand.game73.fm.home.MainActivity">

    <FrameLayout
        android:id="@+id/main_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rg_mian" />

    <RadioGroup
        android:id="@+id/rg_mian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbt_main_home"
            style="@style/MainTab"
            android:drawableTop="@drawable/main_tab_home"
            android:text="@string/main_tab_home"
            android:textColor="@color/main_tab_color" />

        <RadioButton
            android:id="@+id/rbt_main_product"
            style="@style/MainTab"
            android:drawableTop="@drawable/main_tab_product"
            android:text="@string/main_tab_product"
            android:textColor="@color/main_tab_color"
            />

        <RadioButton
            android:id="@+id/rbt_main_category"
            style="@style/MainTab"
            android:drawableTop="@drawable/main_tab_category"
            android:text="@string/tab_main_category"
            android:textColor="@color/main_tab_color"
            />

        <RadioButton
            android:id="@+id/rbt_main_car"
            style="@style/MainTab"
            android:drawableTop="@drawable/main_tab_car"
            android:text="@string/tab_mian_car"
            android:textColor="@color/main_tab_color"
            />

        <RadioButton
            android:id="@+id/rbt_main_mine"
            style="@style/MainTab"
            android:drawableTop="@drawable/main_tab_mine"
            android:text="@string/tab_main_mine"
            android:textColor="@color/main_tab_color"
            />
    </RadioGroup>
</RelativeLayout>
